--- a/lib/config/workingConfig.json
+++ b/lib/config/workingConfig.json
@@ -21,7 +21,7 @@
       "radius": 8,
       "items": [
         {
-          "product": 30,
+          "product": 25056,
           "image": "https://i.imgur.com/84ySdG3.jpg",
           "padding": 15.0
         }
@@ -37,19 +37,20 @@
       "radius": 8,
       "items": [
         {
-          "product": 30,
+          "category": 4783,
           "image": "https://i.imgur.com/H0bcI9u.jpg",
           "padding": 15.0
         },
         {
-          "category": 29,
+          "category": 2352,
           "image": "https://i.imgur.com/H7BJGsh.jpg",
           "padding": 15.0
         }
       ]
     },
     {
-      "name": "מוצרים מעולים",
+      "name": "מדפסות מעולות",
+      "category": 2341,
       "layout": "threeColumn",
       "isSnapping": true
     }
@@ -61,11 +62,11 @@
     "isVertical": true
   },
   "Setting": {
-    "MainColor": "#D32F2F",
+    "MainColor": "#961b1e",
     "FontFamily": "Heebo",
     "ProductListLayout": "list",
     "StickyHeader": true,
-    "ProductDetail": "simpleType",
+    "ProductDetail": "halfSizeImageType",
     "ShowChat": true
   },
   "TabBar": [
@@ -99,6 +100,10 @@
       "layout": "category",
       "categoryLayout": "card",
       "icon": "assets/icons/tabs/icon-category.png"
+    },
+    {
+      "layout": "wishlist",
+      "icon": "assets/icons/tabs/icon-home.png"
     }
   ],
   "Drawer": {
@@ -110,7 +115,7 @@
       } ,
       {
         "type": "blog" ,
-        "show": false
+        "show": true
       } ,
       {
         "type": "login" ,
@@ -132,19 +137,13 @@
   "OnBoarding": {
     "data": [
       {
-        "title": "Welcome to FluxStore",
-        "image": "assets/images/fogg-delivery-1.png",
-        "desc": "Fluxstore is on the way to serve you. ",
-        "background": "#FFF3F2"
-      },
-      {
-        "title": "Connect Surrounding World",
-        "image": "assets/images/fogg-uploading-1.png",
-        "desc": "See all things happening around you just by a click in your phone. Fast, convenient and clean.",
+        "title": "מתנת הצטרפות מאיתנו",
+        "image": "myCupon",
+        "desc": "",
         "background": "#F2FFFC"
       },
       {
-        "title": "Let's Get Started",
+        "title": "זה הזמן להתחיל",
         "image": "fogg-order-completed.png",
         "desc": "Waiting no more, let's see what we get!",
         "background": "#F9F2FF"
