--- a/lib/config/config_he.json
+++ b/lib/config/config_he.json
@@ -169,6 +169,7 @@
         "wishlist" ,
         "darkTheme" ,
         "rating" ,
+        "spiders" ,
         "about"
       ] ,
       "background": "https://i.imgur.com/Oz76QDp.png"
