--- a/modules/common_library/pubspec.yaml
+++ b/modules/common_library/pubspec.yaml
@@ -34,6 +34,10 @@ flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
     - assets/images/empty.png
+    - assets/images/
+    - assets/
+#    - assets/icons/
+    - assets/icons/tabs/spider3d/sales.png
 
   #
   # For details regarding assets in packages, see
