--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Fluxstore</string>
+	<string>Spider3D</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -29,7 +29,7 @@
 			<string>inspireui.com</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fluxstore</string>
+				<string>Spider3D</string>
 				<string>fb430258564493822</string>
 			</array>
 		</dict>
@@ -67,7 +67,7 @@
 	<key>FacebookAppID</key>
 	<string>430258564493822</string>
 	<key>FacebookDisplayName</key>
-	<string>FluxStore</string>
+	<string>Spider3D</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<true/>
 	<key>FirebaseScreenReportingEnabled</key>
