--- a/lib/config/config_he.json
+++ b/lib/config/config_he.json
@@ -128,8 +128,8 @@
       "items": []
     },
     {
-      "name": "מדפסות 3D מומלצות",
-      "category": 2341,
+      "name": "הפילמנטים שלנו",
+      "category": 4782,
       "layout": "threeColumn",
       "isSnapping": true
     },
