--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,7 +76,8 @@ dependencies:
 
   # AUTHENTICATION
   the_apple_sign_in: 1.1.1
-  flutter_facebook_auth: 3.4.0
+#  flutter_facebook_auth: 3.4.0
+  flutter_facebook_auth:
   google_sign_in: 5.0.3
   sms_autofill: 2.0.0
 
