--- a/lib/config/config_he.json
+++ b/lib/config/config_he.json
@@ -205,7 +205,7 @@
   } ,
   "searchSuggestion": [
     "הנה כמה מההצעות שלנו:",
-    "פילמנט PLA+",
+    "PLA+",
     "SILK",
     "מדפסת Hornet 3D",
     "פילמנט מחליף צבעים"
