--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,8 @@ dependencies:
 
   # WEB TOOLS
   html_unescape: 2.0.0
-  webview_flutter: 2.0.7
+#  webview_flutter: 2.0.7
+  webview_flutter: 2.0.4
   flutter_widget_from_html: 0.6.1
   flutter_webview_plugin:
     git:
