--- a/ios/Runner/RunnerProfile.entitlements
+++ b/ios/Runner/RunnerProfile.entitlements
@@ -10,8 +10,9 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:inspireui.com</string>
 		<string>applinks:fluxstoreinspireui.page.link</string>
+		<string>applinks:inspireui.com</string>
+		<string>applinks:firestoreinspireui.page.link</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
