--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,7 @@ dependencies:
   # AUTHENTICATION
   the_apple_sign_in: 1.1.1
 #  flutter_facebook_auth: 3.4.0
-  flutter_facebook_auth:
+  flutter_facebook_auth: ^3.5.1
   google_sign_in: 5.0.3
   sms_autofill: 2.0.0
 
