--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,9 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<!--TODO: Change your app name -->
 	<key>CFBundleDisplayName</key>
-	<string>Fluxstore</string>
+	<string>Spider3D</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,10 +25,8 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
-			<!--TODO: Change your site name -->
 			<key>CFBundleURLName</key>
 			<string>inspireui.com</string>
-			<!--TODO: Change your facebook app id, must include fb -->
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb430258564493822</string>
@@ -38,7 +35,6 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
-			<!--TODO: COPY REVERSED_CLIENT_ID from GoogleService-Info.plist and replace it here -->
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.googleusercontent.apps.412823237422-pf5dr3f75n6r201u24ocioin54u3cseq</string>
@@ -49,7 +45,6 @@
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
 			<string>firebaseDynamicLink</string>
-			<!--TODO: Change it to your app bunndle id -->
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>com.inspireui.mstore.flutter</string>
@@ -58,19 +53,16 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
-	<!--TODO: Change your facebook app id -->
 	<key>FacebookAppID</key>
 	<string>430258564493822</string>
-	<!--TODO: Change your facebook app name -->
 	<key>FacebookDisplayName</key>
 	<string>FluxStore</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<true/>
+	<key>FirebaseDeepLinkPasteboardRetrievalEnabled</key>
+	<false/>
 	<key>FirebaseScreenReportingEnabled</key>
 	<true/>
-	<key>FirebaseDeepLinkPasteboardRetrievalEnabled</key>
-    <false/>
-    <!--TODO: Change your Admob ID here. If your app does not use admob, remove these 2 lines below -->
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-7432665165146018~2664444130</string>
 	<key>LSApplicationQueriesSchemes</key>
@@ -106,7 +98,6 @@
 	<string>Get your current location for delivery</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires access to the photo library to support Chat Features.</string>
-	<!--TODO: Remove these 2 lines below if your app does not use AdMob and FacebookAd -->
 	<key>NSUserTrackingUsageDescription</key>
 	<string>This identifier will be used to deliver personalized ads to you. "Ask App Not to track" will limit Advertisement network's ability to deliver relevant ads to you but will not reduce the number of ads you receive. </string>
 	<key>SKAdNetworkItems</key>
@@ -143,58 +134,5 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<string>YES</string>
-	<key>NSCameraUsageDescription</key>
-	<string>This app requires access to take the photo from camera</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Need current location access</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Get your current location for delivery</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires access to the photo library to support Chat Features.</string>
-	<key>UIBackgroundModes</key>
-	<array>
-        <!--  TODO: enable if you use the audio background player  -->
-        <!-- <string>audio</string> -->
-		<string>fetch</string>
-		<string>remote-notification</string>
-	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-	<key>io.flutter.embedded_views_preview</key>
-	<string>YES</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>fbapi</string>
-		<string>fbapi20130214</string>
-		<string>fbapi20130410</string>
-		<string>fbapi20130702</string>
-		<string>fbapi20131010</string>
-		<string>fbapi20131219</string>
-		<string>fbapi20140410</string>
-		<string>fbapi20140116</string>
-		<string>fbapi20150313</string>
-		<string>fbapi20150629</string>
-		<string>fbauth</string>
-		<string>fbauth2</string>
-		<string>fb-messenger-api20140430</string>
-	</array>
 </dict>
 </plist>
