--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     dependencies {
         // ...
         // OneSignal-Gradle-Plugin
-        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.6, 0.99.99]'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.10, 0.99.99]'
     }
 }
 
@@ -60,18 +60,18 @@ android {
 
     defaultConfig {
         applicationId "com.biton.spider3dflux"
-        minSdkVersion 21
+        minSdkVersion 28
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         resConfigs "en"
-        manifestPlaceholders = [
-                onesignal_app_id: 'PUT_YOUR_ONESIGNAL_APP_ID_HERE',
-                // Project number pulled from dashboard, local value is ignored.
-                onesignal_google_project_number: 'REMOTE'
-        ]
+//        manifestPlaceholders = [
+//                onesignal_app_id: 'PUT_YOUR_ONESIGNAL_APP_ID_HERE',
+//                // Project number pulled from dashboard, local value is ignored.
+//                onesignal_google_project_number: 'REMOTE'
+//        ]
     }
 
     signingConfigs {
