--- a/lib/config/workingConfig.json
+++ b/lib/config/workingConfig.json
@@ -128,8 +128,8 @@
       "items": []
     },
     {
-      "name": "מדפסות 3D מומלצות",
-      "category": 2341,
+      "name": "הפילמנטים שלנו",
+      "category": 4780,
       "layout": "threeColumn",
       "isSnapping": true
     },
@@ -172,7 +172,7 @@
     },
     {
       "layout": "wishlist",
-      "icon": "assets/icons/tabs/icon-heartthin.png"
+      "icon": "assets/icons/tabs/icon-thingi.png"
     },
     {
       "layout": "profile",
@@ -181,10 +181,8 @@
       "pos": 400 ,
       "settings": [
         "order" ,
-        "wishlist" ,
         "darkTheme" ,
         "rating" ,
-        "spiders" ,
         "about"
       ] ,
       "background": "https://i.imgur.com/Oz76QDp.png"
@@ -205,7 +203,7 @@
   } ,
   "searchSuggestion": [
     "הנה כמה מההצעות שלנו:",
-    "פילמנט PLA+",
+    "PLA+",
     "SILK",
     "מדפסת Hornet 3D",
     "פילמנט מחליף צבעים"
