--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.inspireui.mstore.flutter</string>
+	<string>com.biton.spider3dflux</string>
 	<key>PROJECT_ID</key>
 	<string>fluxstore-inspireui</string>
 	<key>STORAGE_BUCKET</key>
