--- a/ios/Runner/RunnerProfile.entitlements
+++ b/ios/Runner/RunnerProfile.entitlements
@@ -16,7 +16,7 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.inspireui.mstore.flutter.onesignal</string>
+		<string>group.com.biton.spider3dflux.onesignal</string>
 	</array>
 </dict>
 </plist>
