--- a/lib/config/config_he.json
+++ b/lib/config/config_he.json
@@ -183,6 +183,7 @@
         "order" ,
         "darkTheme" ,
         "rating" ,
+        "language",
         "about"
       ] ,
       "background": "https://i.imgur.com/Oz76QDp.png"
