--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -171,6 +171,7 @@ dependencies:
   credit_card_validate: ^0.0.3
   translator: ^0.1.7
   html:
+  dio: 4.0.0
   web_scraper: ^0.1.4
   chaleno: ^0.0.5
   puppeteer: ^2.5.0
