--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -132,6 +132,8 @@ dependencies:
   devicelocale: 0.4.1
   collection: 1.15.0
   visibility_detector: 0.2.2
+  flutter_mailer: ^2.0.0
+  mailer: ^5.0.2
   rate_my_app: 1.1.0+1
   package_info: 2.0.0
 
