--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>412823237422-pf5dr3f75n6r201u24ocioin54u3cseq.apps.googleusercontent.com</string>
+	<string>349562325339-4oi8e4v540ip5n31l7vc6vv98tggnspd.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.412823237422-pf5dr3f75n6r201u24ocioin54u3cseq</string>
+	<string>com.googleusercontent.apps.349562325339-4oi8e4v540ip5n31l7vc6vv98tggnspd</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>412823237422-3d7l4tv9d524qds81062g6vfr588u9rg.apps.googleusercontent.com</string>
+	<string>349562325339-4lasdd2uen8vio7rdr3vpe59vnee3ptj.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA2BWeKRw-D7zHLnvVVoi6ahOqyucoa9s0</string>
+	<string>AIzaSyBDjZLL2YBWLQbA1py3Rle9DbI6-WaqyqA</string>
 	<key>GCM_SENDER_ID</key>
-	<string>412823237422</string>
+	<string>349562325339</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.biton.spider3dflux</string>
 	<key>PROJECT_ID</key>
-	<string>fluxstore-inspireui</string>
+	<string>spider3d-flux</string>
 	<key>STORAGE_BUCKET</key>
-	<string>fluxstore-inspireui.appspot.com</string>
+	<string>spider3d-flux.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,8 +31,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:412823237422:ios:8947f503f8cb2000fb40bf</string>
+	<string>1:349562325339:ios:e6b9532799fbca0eb9f27e</string>
 	<key>DATABASE_URL</key>
-	<string>https://fluxstore-inspireui.firebaseio.com</string>
+	<string>https://spider3d-flux-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
