--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,12 +28,12 @@ if (flutterRoot == null) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '13100'
+    flutterVersionCode = '1401'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-    flutterVersionName = '13.10.0 - Coupons fix + summarize'
+    flutterVersionName = '14.0.1 - Icredit Fix II'
 }
 
 apply plugin: 'com.android.application'
