--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,12 +28,12 @@ if (flutterRoot == null) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '14002'
+    flutterVersionCode = '27000'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-    flutterVersionName = '14.00.2 - Icredit Fix III'
+    flutterVersionName = '27.00.0 - Checkout V3 Makeover'
 }
 
 apply plugin: 'com.android.application'
