--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,12 +28,12 @@ if (flutterRoot == null) {
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
-    flutterVersionCode = '35000'
+    flutterVersionCode = '36000'
 }
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-    flutterVersionName = '35.00.0 - Fix API Bug & Update key'
+    flutterVersionName = '36.00.0 - Check4update I'
 }
 
 apply plugin: 'com.android.application'
