--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ if (flutterVersionCode == null) {
 
 def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
-    flutterVersionName = '36.00.0 - Check4update I'
+    flutterVersionName = '37.04.0 - fix variations bugs'
 }
 
 apply plugin: 'com.android.application'
